--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Password Generator</title>
 </head>
 <body>
-
-<script type="text/javascripot" src="./js/main.js"></script>
+    <div id="password"></div>
+<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
